--- a/pages/toji.html
+++ b/pages/toji.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toji Routine</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="styles.css">
+
 </head>
 <body>
+    <h1>Toji Inspired Routine</h1>
+
+    <h1>Six-Day Workout Plan</h1>
+
+    <h2>Day 1: Back and Shoulders</h2>
+    <ol>
+      <li>Deadlifts (Barbell) - 4 sets of 5 reps</li>
+      <li>Barbell Rows - 4 sets of 8-10 reps</li>
+      <li>Pull-Ups or Assisted Pull-Ups - 4 sets of 8-10 reps</li>
+      <li>Seated Dumbbell Shoulder Press - 4 sets of 8-10 reps</li>
+      <li>Lateral Raises - 3 sets of 10-12 reps</li>
+      <li>Face Pulls - 3 sets of 12-15 reps</li>
+    </ol>
     
+    <h2>Day 2: Legs and Core</h2>
+    <ol>
+      <li>Squats (Barbell) - 4 sets of 5 reps</li>
+      <li>Romanian Deadlifts - 4 sets of 8-10 reps</li>
+      <li>Bulgarian Split Squats - 3 sets of 10-12 reps per leg</li>
+      <li>Leg Press - 3 sets of 10-12 reps</li>
+      <li>Plank - 3 sets of 45-60 seconds</li>
+      <li>Russian Twists - 3 sets of 15-20 reps</li>
+    </ol>
+
+
+    <a href="../index.html">Home</a>
 </body>
 </html>
