Added more css for dark background and font colors

--- a/pages/baki.html
+++ b/pages/baki.html
@@ -13,7 +13,7 @@
     
 </head>
 <body>
-    <h1>Toji Inspired Routine</h1>
+    <h1>Baki Inspired Routine</h1>
     <a href="../index.html">Home</a>
 </body>
 </html>
