Added random HTML to test CSS

--- a/index.html
+++ b/index.html
@@ -14,9 +14,32 @@
 
 <body>
     <h1>Hello World</h1>
+
+    <div class="box">
+        <h1>Welcome to BrutalFit</h1>
+        <p>Your one-stop destination for raw and intense fitness routines.</p>
+        <p>Get ready to sweat, push your limits, and embrace the power within you.</p>
+        <a href="#" class="button">Get Started</a>
+    </div>
+      
+    <div class="box">
+        <h2>Our Training Programs</h2>
+        <p>Choose from a variety of hardcore training programs designed to transform your body and mind.</p>
+        <a href="#">View Programs</a>
+    </div>
+      
+    <div class="box">
+        <h3>Why Choose BrutalFit?</h3>
+        <p>We believe in pushing boundaries, breaking limits, and achieving greatness.</p>
+        <p>Our no-nonsense approach to fitness will challenge you like never before.</p>
+        <a href="#">Learn More</a>
+    </div>
+
+
     <a href="../workout-routines/pages/toji.html">Toji</a>
     <a href="../workout-routines/pages/baki.html">Baki</a>
 </body>
+
 
 
 </html>
